# phone-pc-phone-autobackup

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_hidden.vbs  setup_startup.bat  start.bat
phone_auto_backup/: __init__.py  adb.py  app.py  backup.py  camera_backup.py  config.py  state.py  to_phone.py  tray.py  ui.py
